<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_laptop"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/lenovo_thinkpad_p1"/>

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:text="@string/nama_laptop"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_description_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Harga Laptop Bisa Menurun Sesuai Zaman, Berikut Harga Laptopnya"
                android:textSize="17sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_description_price"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:text="@string/item_price"
                android:textSize="25sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_rincian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_price"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="Rincian"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_rincian"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/description" />

            <Button
                android:id="@+id/btn_buy"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_below="@id/tv_item_description"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="Cek Harga Di Tokopedia"
                />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>